# xarray-ome-ngff

./: .pre-commit-config.yaml  404.html  LICENSE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  pypi.yml  test.yml
api/: index.html
api/array_wrap/: index.html
api/v04/multiscale/: index.html
docs/: index.md
docs/api/: array_wrap.md  index.md
docs/api/v04/: multiscale.md
src/xarray_ome_ngff/: __about__.py  __init__.py  array_wrap.py  base.py  core.py  latest.py  registry.py  version.py
src/xarray_ome_ngff/latest/: multiscales.py
src/xarray_ome_ngff/v04/: multiscale.py  multiscales.py
src/xarray_ome_ngff/v05/: multiscales.py
tests/: conftest.py  test_05.py  test_core.py  test_docs.py  test_latest.py  test_registry.py  test_v04.py
